# B5

./: .gitignore  makefile
content/W2/: index.qmd  pyproject.toml
content/W2/M1/exercises/: John Snow
content/W2/M1/lessons/: 02_lab_cda_blind_typing.ipynb  03_lab_eda_census.ipynb
content/W2/M2/exercises/: Exercises (2).ipynb  Exercises (3).ipynb  Exercises.ipynb
content/W2/M2/lessons/: 01_pd_dataframe.ipynb  02_pd_agg.ipynb  03_pd_function_application.ipynb  03_pd_reshape.ipynb  03_pd_reshape_pivot_groupby.ipynb  04_lab_bike_sharing.ipynb  05_pd_reshape.ipynb  05_pd_timeseries.ipynb  06_pd_function_application.ipynb
content/W2/M3/exercises/: m3-1_exercise.ipynb  m3-2_exercise.ipynb  viz_exercises.ipynb
content/W2/M3/lessons/: 01_slides_statistics.qmd  01_statistics.ipynb  01_univariate.ipynb  02_data_viz.ipynb  02_relationships.ipynb  03_displot.ipynb  03_hypothesis_testing.ipynb  04_bivariate.ipynb  04_catplot.ipynb  displot.ipynb  more_correlation.ipynb  more_displot.ipynb  plot_timeries.ipynb
content/W2/M4/exercises/: hypothesis_ex.ipynb
content/W2/Project/: presentation.qmd
content/W2/Project/PR/: PShaima.ipynb
content/W2/data/: MonkeyType.csv
content/W4/: .env.example  index.qmd  notes-case-studies.md  pyproject.toml
content/W4/M1/: 00_intro.qmd  01_agents.ipynb  02_subagents.ipynb  03_retrieval.qmd  04_embeddings.ipynb  05_semantic_search.ipynb  06_RAG_agent.ipynb  07_context_and_state.ipynb  08_customer_support_agent.ipynb  09_langgraph.qmd  10_workflows.ipynb  11_langsmith.qmd  case-studies.qmd  faq.qmd  never_expose_api_keys.qmd
(+74 files in other folders)
