[project]
name = "agentic-ai"
version = "0.1.0"
description = "Agentic AI Course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.10.0",
    "deepagents>=0.4.1",
    "huggingface-hub>=0.36.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "langgraph-cli[inmem]>=0.4.12",
    "matplotlib>=3.10.8",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pypdf>=6.7.1",
    "seaborn>=0.13.2",
    "tavily-python>=0.7.21",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
